--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@
 npm-debug.log
 testem.log
 /typings
+/logs
 
 # e2e
 /e2e/*.js
@@ -40,3 +41,5 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+*.*~
+
