--- a/package.json
+++ b/package.json
@@ -20,18 +20,33 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
+    "async": "^2.4.1",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.17.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
+    "core-js": "^2.4.1",
+    "crypto": "0.0.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-session": "^1.15.3",
     "hbs": "~4.0.1",
+    "jsonwebtoken": "^7.4.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "morgan": "~1.8.1",
+    "mysql2": "^1.3.5",
+    "nodemailer": "^4.0.1",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
+    "rxjs": "^5.1.0",
+    "sequelize": "^4.1.0",
     "serve-favicon": "~2.4.2",
-    "mysql":"~2.13.0"
-
+    "winston": "^2.3.1",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "1.1.0",
