--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "moment": "^2.18.1",
     "morgan": "~1.8.1",
     "mysql2": "^1.3.5",
+    "ng2-dnd": "^4.2.0",
+    "ng2-toastr": "^4.1.2",
     "nodemailer": "^4.0.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.3.2",
