--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "mysql2": "^1.3.5",
     "ng2-dnd": "^4.2.0",
     "ng2-toastr": "^4.1.2",
@@ -47,6 +48,8 @@
     "rxjs": "^5.1.0",
     "sequelize": "^4.1.0",
     "serve-favicon": "~2.4.2",
+    "sweetalert2": "^6.6.6",
+    "webrtc-adapter": "^4.2.1",
     "winston": "^2.3.1",
     "zone.js": "^0.8.4"
   },
