--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "mysql2": "^1.3.5",
+    "ng2-dnd": "^4.2.0",
+    "ng2-toastr": "^4.1.2",
     "nodemailer": "^4.0.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.3.2",
@@ -45,6 +48,8 @@
     "rxjs": "^5.1.0",
     "sequelize": "^4.1.0",
     "serve-favicon": "~2.4.2",
+    "sweetalert2": "^6.6.6",
+    "webrtc-adapter": "^4.2.1",
     "winston": "^2.3.1",
     "zone.js": "^0.8.4"
   },
