--- a/.eslintrc
+++ b/.eslintrc
@@ -30,10 +30,11 @@
         "prefer-template": "error",
         "comma-spacing": ["error", { "before": false, "after": true }],
         "space-before-function-paren": ["error", "never"],
+        "space-before-blocks": ["error"],
         "no-lonely-if": "error",
         "arrow-spacing": "error",
         "key-spacing": ["error", { "beforeColon": false }],
+        "keyword-spacing": ["error", { "before": true }],
         "space-infix-ops": "error"
     }
 }
-
