--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hbs": "~4.0.1",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
+    "mocha": "^3.5.0",
     "moment": "^2.18.1",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
@@ -48,6 +49,8 @@
     "rxjs": "^5.1.0",
     "sequelize": "^4.1.0",
     "serve-favicon": "~2.4.2",
+    "should": "^11.2.1",
+    "supertest": "^3.0.0",
     "sweetalert2": "^6.6.6",
     "webrtc-adapter": "^4.2.1",
     "winston": "^2.3.1",
