--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "apiai": "^4.0.3",
     "async": "^2.4.1",
-    "bcrypt": "^1.0.2",
+    "bcrypt": "^1.0.3",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.17.1",
     "connect-flash": "^0.1.1",
