--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^2.4.1",
     "crypto": "0.0.3",
     "debug": "~2.6.3",
+    "email-verify": "^0.1.1",
     "express": "~4.15.2",
     "express-session": "^1.15.3",
     "hammerjs": "^2.0.8",
