Stop the breed Game

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^6.0.2",
     "@angular/router": "^6.0.2",
     "@types/mocha": "^5.2.0",
+    "@types/raphael": "^2.1.30",
     "apiai": "^4.0.3",
     "async": "^2.4.1",
     "bcrypt": "^1.0.2",
@@ -43,8 +44,8 @@
     "handlebars": "^4.0.10",
     "hbs": "~4.0.1",
     "intl": "^1.2.5",
-    "jquery": "^3.2.1",
-    "jsonwebtoken": "^7.4.1",
+    "jquery": "^3.3.1",
+    "jsonwebtoken": "^7.4.3",
     "lodash": "^4.17.4",
     "mocha": "^3.5.0",
     "moment": "^2.18.1",
@@ -55,10 +56,12 @@
     "ngx-toastr": "^8.6.0",
     "nodemailer": "^4.0.1",
     "nodemailer-smtp-transport": "^2.7.4",
+    "node-sass": "^4.0.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
+    "raphael": "^2.2.7",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.0.0-rc.0",
     "sequelize": "^4.1.0",
