--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
               "src/styles.scss",
               "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": []
+            "scripts": ["node_modules/raphael/raphael.min.js"]
           },
           "configurations": {
             "production": {
