--- a/package.json
+++ b/package.json
@@ -11,35 +11,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/cdk": "^2.0.0-beta.8",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/material": "^2.0.0-beta.8",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/animations": "^6.0.2",
+    "@angular/cdk": "^6.0.2",
+    "@angular/common": "^6.0.2",
+    "@angular/compiler": "^6.0.2",
+    "@angular/core": "^6.0.2",
+    "@angular/forms": "^6.0.2",
+    "@angular/http": "^6.0.2",
+    "@angular/material": "^6.0.2",
+    "@angular/platform-browser": "^6.0.2",
+    "@angular/platform-browser-dynamic": "^6.0.2",
+    "@angular/platform-server": "^6.0.2",
+    "@angular/router": "^6.0.2",
+    "@types/mocha": "^5.2.0",
     "apiai": "^4.0.3",
     "async": "^2.4.1",
     "bcrypt": "^1.0.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.17.1",
+    "chai": "^4.1.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "core-js": "^2.4.1",
     "crypto": "0.0.3",
     "debug": "~2.6.3",
     "email-verify": "0.2.1",
+    "eslint": "^4.19.1",
     "express": "~4.15.2",
     "express-session": "^1.15.3",
     "hammerjs": "^2.0.8",
     "handlebars": "^4.0.10",
     "hbs": "~4.0.1",
-    "jquery": "^3.2.1",
-    "jsonwebtoken": "^7.4.1",
+    "intl": "^1.2.5",
+    "jasmine": "^3.1.0",
+    "jquery": "^3.3.1",
+    "jsonwebtoken": "^7.4.3",
     "lodash": "^4.17.4",
     "mocha": "^3.5.0",
     "moment": "^2.18.1",
@@ -47,41 +53,46 @@
     "multer": "^1.3.0",
     "mysql2": "^1.3.5",
     "ng2-dnd": "^4.2.0",
-    "ng2-toastr": "^4.1.2",
+    "ngx-toastr": "^8.6.0",
+    "node-sass": "^4.0.0",
     "nodemailer": "^4.0.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
-    "rxjs": "^5.1.0",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.0.0-rc.0",
     "sequelize": "^4.1.0",
     "serve-favicon": "~2.4.2",
     "should": "^11.2.1",
+    "sinon": "^5.0.7",
     "supertest": "^3.0.0",
     "sweetalert2": "^6.6.6",
+    "tslib": "^1.9.1",
     "webrtc-adapter": "^4.2.1",
     "winston": "^2.3.1",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.1.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/language-service": "^4.0.0",
+    "@angular-devkit/build-angular": "~0.6.3",
+    "@angular/cli": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.2",
+    "@angular/language-service": "^6.0.2",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.0.1",
+    "codelyzer": "^3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "2.7.2"
   }
 }
