--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^6.0.2",
     "@angular/router": "^6.0.2",
     "@types/mocha": "^5.2.0",
+    "@types/raphael": "^2.1.30",
     "apiai": "^4.0.3",
     "async": "^2.4.1",
     "bcrypt": "^1.0.2",
@@ -54,13 +55,14 @@
     "mysql2": "^1.3.5",
     "ng2-dnd": "^4.2.0",
     "ngx-toastr": "^8.6.0",
-    "node-sass": "^4.0.0",
     "nodemailer": "^4.0.1",
     "nodemailer-smtp-transport": "^2.7.4",
+    "node-sass": "^4.0.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
+    "raphael": "^2.2.7",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.0.0-rc.0",
     "sequelize": "^4.1.0",
@@ -85,7 +87,7 @@
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "^1.7.1",
-    "karma-chrome-launcher": "^2.1.1",
+    "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "^1.1.2",
@@ -93,6 +95,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "2.7.2"
+    "typescript": "^2.7.2"
   }
 }
