--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/platform-server": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "@types/jquery": "^3.3.4",
     "@types/mocha": "^5.2.0",
     "@types/raphael": "^2.1.30",
     "apiai": "^4.0.3",
@@ -55,9 +56,9 @@
     "mysql2": "^1.3.5",
     "ng2-dnd": "^4.2.0",
     "ngx-toastr": "^8.6.0",
+    "node-sass": "^4.0.0",
     "nodemailer": "^4.0.1",
     "nodemailer-smtp-transport": "^2.7.4",
-    "node-sass": "^4.0.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-http-bearer": "^1.0.1",
