--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "core-js": "^2.4.1",
+    "cors": "^2.8.4",
     "crypto": "0.0.3",
     "debug": "~2.6.3",
     "email-verify": "0.2.1",
