--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/platform-server": "^6.0.2",
+    "@angular/pwa": "^0.6.8",
     "@angular/router": "^6.0.2",
     "@types/jquery": "^3.3.4",
     "@types/mocha": "^5.2.0",
@@ -76,7 +77,8 @@
     "tslib": "^1.9.1",
     "webrtc-adapter": "^4.2.1",
     "winston": "^2.3.1",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "@angular/service-worker": "^6.0.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.3",
